# lesson_17.1

./: main.py  main2.py  main3.py  pyproject.toml
src/: dedline_task.py  exceptions.py  periodic_task.py  task.py  task_iterator.py  user.py  utils.py
tests/: conftest.py  test_deadline_task.py  test_main3.py  test_periodic_task.py  test_print_mixin.py  test_task.py  test_user.py
